# website

./: .dockerignore  .editorconfig  .prettierignore  Cargo.toml  Dockerfile  build.js  compose.example.yaml  emails.txt  index.html  nginx.example.conf  package-lock.json  package.json  riji.rhai  server.js  style.css  vite.config.js
.github/workflows/: deploy.yml
server/: Cargo.toml  build.rs
server/src/: api.rs  cors.rs  dist_routes.rs  main.rs  ui.rs
server/src/chess/: api.rs  chess.rs  engine.rs  logic.rs  lookup.rs  macros.rs  mod.rs  pgn.rs  types.rs  ws.rs
src/: app.css  app.scss  app.svelte  client.js  index.html  main.js  server.js
src/blog/: routes.js  setup-docker.md  setup-gitlab.md  setup-kellnr.md  setup-postfix.md  setup-postgres.md  setup-ssh.md
src/layout/: blog.svelte  footer.svelte
src/lib/: highlightcopy.js  pages.js  router.js
src/pages/: index.svelte  notfound.svelte  routes.js
src/pages/index/: index.js  index.svelte  intro.svelte  introbg.svelte
src/templates/: mdblog.svelte
ui/: .gitignore  .prettierrc  build.js  index.html  package-lock.json  package.json  server.js  tsconfig.json  vite.config.js
ui/src/: App.svelte  app.scss  client.ts  main.ts  server.ts
ui/src/blog/: routes.js  setup-gitlab.md  setup-kellnr.md  setup-nginx.md  setup-ssh.md
ui/src/chess/: Board.svelte  BoardView.ts  Connection.ts  data.ts  types.ts
ui/src/components/: Background.svelte  Footer.svelte
ui/src/components/shaders/: fragment.glsl
ui/src/css/: typo.scss
ui/src/layout/: blog.svelte
ui/src/lib/: Sprite.ts  highlightcopy.js  wasm.ts
ui/src/pages/: index.svelte  notfound.svelte  routes.ts
ui/src/pages/index/: Chess.svelte  Toasts.svelte  intro.svelte  introbg.svelte
ui/src/pages/index/shaders/: fragment.glsl  vertex.glsl
ui/src/templates/: mdblog.svelte
wasm/: Cargo.toml  riji.rhai
wasm/src/: lib.rs
