[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "fs"] }
clap = { version = "4.0", features = ["derive"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
fire = { package = "fire-http", version = "0.5.0-beta.3", features = [
	"fs",
	"json",
] }
fire-ssr = "0.2.0-alpha.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
