[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "fs"] }
clap = { version = "4.0", features = ["derive"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
chuchi = { version = "0.1.0", features = ["fs", "json", "api", "ws"] }
chuchi-ssr = "0.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
thiserror = "1.0.63"
chuchi-postgres = { version = "0.1.3", features = ["chuchi", "json"] }
duck-chess = "0.1.1"
