[package]
name = "wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true

[dependencies]
wasm-bindgen = "0.2"
duck-chess = { version = "0.1.0", "path" = "../../duck-chess/engine" }
serde-wasm-bindgen = "0.6.5"
serde = { version = "1.0", features = ["derive"] }
